crates/canvas-cli/tests/e2e/snapshots/cache_path_json.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 0,
  "freshness": [],
  "generated_at": "2026-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "1"
  },
  "outcome": "ok",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 0,
    "cost": null,
    "storage": 0
  },
  "result": {
    "path": "<scratch>/data/<identity>/cache.sqlite"
  },
  "schema": "canvas-cli/cache@1",
  "warnings": []
}
