crates/canvas-cli/tests/e2e/snapshots/cache_path_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
<scratch>/data/<identity>/cache.sqlite
--- stderr ---
