crates/canvas-cli/tests/e2e/snapshots/calendar_ics_stdout.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
BEGIN:VCALENDAR
VERSION:2.0
PRODID:-//canvas-cli//EN
CALSCALE:GREGORIAN
BEGIN:VEVENT
UID:canvas-event-60050@<identity>
DTSTAMP:20400909T170512Z
DTSTART:20400915T150000Z
DTEND:20400915T160000Z
SUMMARY:[SYN-600] Synthetic Calendar
END:VEVENT
BEGIN:VEVENT
UID:canvas-assignment-60009@<identity>
DTSTAMP:20400909T170512Z
DTSTART:20400920T035900Z
SUMMARY:[SYN-600] Synthetic Planner
DESCRIPTION:unknown
END:VEVENT
END:VCALENDAR
--- stderr ---
